Fix PUT endpoint url

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -18,7 +18,7 @@
 <script type="text/javascript">
     $(function() {
         $('#media-listing').restAdmin({
-            url: '/api/media/',
+            url: '/api/media',
             schema: [
                 {
                     name: "id",
