Use a choice list for unit

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -46,8 +46,10 @@
                 },
                 {
                     name: "unit",
-                    type: "text",
-                    defaultValue: "ms"
+                    type: "select",
+                    label: "unit",
+                    defaultValue: "ms",
+                    choices: [ { label: "ms", value: "ms" } ]
                 },
                 {
                     name: "meta.dc:description",
