--- a/templates/admin.html
+++ b/templates/admin.html
@@ -2,6 +2,7 @@
 <head>
   <title>Metadata Server Admin</title>
   <link href='/static/jquery.dataTables.css' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.4.1/pure-min.css">
 </head>
 <body>
 <header>
