Fix /package/ view variable initialization

--- a/templates/package.html
+++ b/templates/package.html
@@ -37,7 +37,7 @@ var _config = {
     widgets: [
           {
             type: "HtmlPlayer",
-            video: "{{ package.main_media.url }}"
+            video: "{{ media.url }}"
           },
           { type: "Mediafragment"},
           { type: "Slider" },
