--- a/templates/package.html
+++ b/templates/package.html
@@ -77,6 +77,7 @@ var _config = {
           ]
           };
           _myPlayer = new IriSP.Metadataplayer(_config);
+          document._myPlayer = _myPlayer;
         </script>
     </body>
 </html>
