--- a/templates/package.html
+++ b/templates/package.html
@@ -5,9 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
         <title>{{ package.dc_title }}</title>
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-        <link href='/static/main.css' rel='stylesheet' type='text/css'>
+        <link href="/static/main.css" rel="stylesheet" type="text/css">
         <script type="text/javascript" src="/static/metadataplayer/LdtPlayer-core.js" type="text/javascript"></script>
-    </head>
+  </head>
 
     <body>
         <h1>{{ package.dc_title }}</h1>
