Use a relative width
This needs some fixing on the metadataplayer side (MultiSegments/Segments do not like relative sizes)

--- a/templates/package.html
+++ b/templates/package.html
@@ -35,7 +35,7 @@ var _metadata = {
               videoname = res[1] + ".ogv";
           }
 var _config = {
-    width : 400,
+    width : '80%',
     container : 'LdtPlayer',
     default_options: {
         metadata: _metadata
