--- a/static/main.css
+++ b/static/main.css
@@ -50,6 +50,8 @@ h2 {
 }
 
 #SlideContainer {
+    position: fixed;
+    bottom: 0px;
     width: 70%;
     float: left;
     display: inline;
@@ -58,29 +60,19 @@ h2 {
 }
 
 #LdtPlayer {
-    position: fixed;
-    top: 6em;
-    right: 1em;
     margin: 10px;
     background-color: #fff;
 }
 
-@media all and (max-width: 1200px) {
-    #LdtPlayer {
-        zoom: .3;
-    }
-    
-    #LdtPlayer:hover {
-        zoom: 1;
-    }
-}
-
 #toc {
-    width: 100%;
-    margin: 10px 0;
+    width: 18%;
+    margin: 5px 0;
     text-align: center;
     overflow-y: hidden;
     max-height: 90%;
+    position: absolute;
+    top: 2em;
+    right: 0px;
 }
 
 #AnnotationsListContainer, #SlideShareContainer {
@@ -134,21 +126,5 @@ footer img {
     }
     .hint {
         display: inline;
-    }
-    #toc {
-        position: fixed;
-        bottom: 5px;
-        right: 0px;
-        max-height: 80px;
-        width: 100%;
-        overflow-x: auto;
-        overflow-y: auto;
-    }
-
-    #toc #AnnotationsListContainer {
-        display: none;
-    }
-    #toc:hover #AnnotationsListContainer {
-        display: block;
     }
 }
