--- a/templates/package.html
+++ b/templates/package.html
@@ -60,6 +60,7 @@ var _config = {
           { type: "CreateAnnotation",
             show_slice: true,
             show_arrow: true,
+            show_controls: true,
             show_creator_field: false,
             show_title_field: false,
             api_endpoint_template: "/api/annotation",
