Add Shortcuts widget

--- a/templates/package.html
+++ b/templates/package.html
@@ -51,6 +51,7 @@ var _config = {
               }
           },
           { type: "Mediafragment"},
+          { type: "Shortcuts"},
           { type: "Slider" },
           { type: "Controller",
             disable_annotate_btn: false },
