Make addressing relative

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,8 +23,8 @@
 </header>
 <h1>Server index</h1>
 <ul>
-  <li><a href="/package/">Package listing</a></li>
-  <li><a href="/admin/">Admin interface</a></li>
+  <li><a href="package/">Package listing</a></li>
+  <li><a href="admin/">Admin interface</a></li>
 </ul>
 </body>
 
