--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <head>
   <title>Metadata Server Admin</title>
-  <link href='/static/jquery.dataTables.css' rel='stylesheet' type='text/css'>
+  <link href='../static/jquery.dataTables.css' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.4.1/pure-min.css">
 </head>
 <body>
@@ -12,15 +12,15 @@
 <h1>Media listing</h1>
 <div id="media-listing"></div>
 
-<script type="text/javascript" src="/static/underscore.js"></script>
-<script type="text/javascript" src="/static/jquery.min.js"></script>
-<script type="text/javascript" src="/static/jquery.restAdmin.js"></script>
-<script type="text/javascript" src="/static/jquery.dataTables.min.js"></script>
+<script type="text/javascript" src="../static/underscore.js"></script>
+<script type="text/javascript" src="../static/jquery.min.js"></script>
+<script type="text/javascript" src="../static/jquery.restAdmin.js"></script>
+<script type="text/javascript" src="../static/jquery.dataTables.min.js"></script>
 <script type="text/javascript">
     $(function() {
         var table_init_count = 0;
         $('#media-listing').restAdmin({
-            url: '/api/media',
+            url: '../api/media',
             schema: [
                 {
                     name: "id",
@@ -82,7 +82,7 @@
             ]
         });
         $('#package-listing').restAdmin({
-            url: '/api/meta',
+            url: '../api/meta',
             schema: [
                 {
                     name: "id",
