--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,12 +1,22 @@
 <!doctype html>
 <head>
   <title>Metadata Server Admin</title>
+  <link href='../static/metaserver.css' rel='stylesheet' type='text/css'>
   <link href='../static/jquery.dataTables.css' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.4.1/pure-min.css">
 </head>
 <body>
 <header>
+<nav>
+  <ul>
+    <li><a href="../">Index</a></li>
+    <li><a href="../package/">Packages</a></li>
+    <li><a href="../admin/">Admin</a></li>
+  </ul>
+</nav>
 </header>
+
+
 <h1>Package listing</h1>
 <div id="package-listing"></div>
 <h1>Media listing</h1>
