--- a/templates/admin.html
+++ b/templates/admin.html
@@ -4,6 +4,9 @@
   <link href='../static/metaserver.css' rel='stylesheet' type='text/css'>
   <link href='../static/jquery.dataTables.css' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.4.1/pure-min.css">
+  <style type="text/css">
+    tr:nth-child(even) { background-color: #CCC !important; }
+  </style>
 </head>
 <body>
 <header>
