--- a/templates/package.html
+++ b/templates/package.html
@@ -5,8 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
         <title>{{ package.dc_title }}</title>
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-        <link href="/static/main.css" rel="stylesheet" type="text/css">
-        <script type="text/javascript" src="/static/metadataplayer/LdtPlayer-core.js" type="text/javascript"></script>
+        <link href="../../static/main.css" rel="stylesheet" type="text/css">
+        <script type="text/javascript" src="../../static/metadataplayer/LdtPlayer-core.js" type="text/javascript"></script>
   </head>
 
     <body>
@@ -20,10 +20,10 @@
           <div id="license"><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/MovingImage" property="dct:title" rel="dct:type">{{ package.dc_title }}</span> by <span xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName">{{ package.dc_title }}</span> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a> <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/4.0/88x31.png" /></a></div>
         </footer>
         <script type="text/javascript">
-IriSP.libFiles.defaultDir = "/static/libs/";
-IriSP.widgetsDir = "/static/metadataplayer";
+IriSP.libFiles.defaultDir = "../../static/libs/";
+IriSP.widgetsDir = "../../static/metadataplayer";
 var _metadata = {
-    url: "/api/package/{{ package.id }}",
+    url: "../../api/package/{{ package.id }}",
     format: 'ldt'
 };
 var _config = {
@@ -32,7 +32,7 @@ var _config = {
     default_options: {
         metadata: _metadata
     },
-    css : '/static/metadataplayer/LdtPlayer-core.css',
+    css : '../../static/metadataplayer/LdtPlayer-core.css',
     widgets: [
           {
               type: "SlideVideoPlayer",
@@ -64,7 +64,7 @@ var _config = {
             show_controls: true,
             show_creator_field: false,
             show_title_field: false,
-            api_endpoint_template: "/api/annotation",
+            api_endpoint_template: "../../api/annotation",
             polemics: [] },
           {
               type: "AnnotationsList",
