Add creator/created fields for annotations

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -19,7 +19,6 @@
 </nav>
 </header>
 
-
 <h1>Package listing</h1>
 <div id="package-listing"></div>
 <h1>Media listing</h1>
@@ -184,6 +183,16 @@
                     name: "type",
                     type: "text",
                     label: "Type"
+                },
+                {
+                    name: "meta.dc:creator",
+                    type: "text",
+                    label: "creator"
+                },
+                {
+                    name: "meta.dc:created",
+                    type: "text",
+                    label: "created"
                 },
                 {
                     name: "meta.dc:contributor",
