Fix relative links

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,15 @@
 <!doctype html>
 <head>
   <title>Metadata Server</title>
-  <link href='../static/metaserver.css' rel='stylesheet' type='text/css'>
+  <link href=static/metaserver.css' rel='stylesheet' type='text/css'>
 </head>
 <body>
   <header>
     <nav>
       <ul>
-        <li><a href="../">Index</a></li>
-        <li><a href="../package/">Packages</a></li>
-        <li><a href="../admin/">Admin</a></li>
+        <li><a href="#">Index</a></li>
+        <li><a href="package/">Packages</a></li>
+        <li><a href="admin/">Admin</a></li>
       </ul>
     </nav>
   {% if userinfo %}
