--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <head>
   <title>Metadata Server</title>
-  <link href=static/metaserver.css' rel='stylesheet' type='text/css'>
+  <link href='static/metaserver.css' rel='stylesheet' type='text/css'>
 </head>
 <body>
   <header>
