--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,8 @@
     <nav>
       <ul>
         <li><a href="#">Index</a></li>
-        <li><a href="package/">Packages</a></li>
-        <li><a href="admin/">Admin</a></li>
+        <li><a href="package/?apikey={{key}}">Packages</a></li>
+        <li><a href="admin/?apikey={{key}}">Admin</a></li>
       </ul>
     </nav>
   {% if userinfo %}
@@ -18,8 +18,8 @@
 </header>
 <h1>Server index</h1>
 <ul>
-  <li><a href="package/">Package listing</a></li>
-  <li><a href="admin/">Admin interface</a></li>
+  <li><a href="package/?apikey={{key}}">Package listing</a></li>
+  <li><a href="admin/?apikey={{key}}">Admin interface</a></li>
 </ul>
 </body>
 
