--- a/templates/admin.html
+++ b/templates/admin.html
@@ -12,9 +12,10 @@
 <header>
 <nav>
   <ul>
-    <li><a href="../">Index</a></li>
-    <li><a href="../package/">Packages</a></li>
-    <li><a href="../admin/">Admin</a></li>
+    <li><a href="../?apikey={{key}}">Index</a></li>
+    <li><a href="../admin/?apikey={{key}}">Admin</a></li>
+    <li><a href="../package/?apikey={{key}}">Packages</a></li>
+    <li><a href="../moderate/?apikey={{key}}">Moderate</a></li>
   </ul>
 </nav>
 </header>
