Add moderate link to index

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
         <li><a href="#">Index</a></li>
         <li><a href="package/?apikey={{key}}">Packages</a></li>
         <li><a href="admin/?apikey={{key}}">Admin</a></li>
+        <li><a href="moderate/?apikey={{key}}">Moderate</a></li>
       </ul>
     </nav>
   {% if userinfo %}
@@ -20,6 +21,7 @@
 <ul>
   <li><a href="package/?apikey={{key}}">Package listing</a></li>
   <li><a href="admin/?apikey={{key}}">Admin interface</a></li>
+  <li><a href="moderate/?apikey={{key}}">Moderate</a></li>
 </ul>
 </body>
 
