Add media filter links to admin and moderate pages

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -289,6 +289,7 @@
                     "dom": 'fipt',
                     "autoWidth": true });
             });
+            $("td.media").html( function () { return '<a href="' + document.location.toString() + '&filter=media:' + $(this).text() + '">' + $(this).text() + '</a>' });
         });
     });
 
