--- a/templates/moderate.html
+++ b/templates/moderate.html
@@ -125,6 +125,7 @@
                     "dom": 'fipt',
                     "autoWidth": true });
             });
+            $("td.media").html( function () { return '<a href="' + document.location.toString() + '&filter=media:' + $(this).text() + '">' + $(this).text() + '</a>' })            
         });
     });
 </script>
