Use "key" option for API elements

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -42,7 +42,7 @@
             schema: [
                 {
                     name: "id",
-                    type: "text",
+                    type: "key",
                     label: "id",
                     unique: true,
                     required: true,
@@ -104,7 +104,7 @@
             schema: [
                 {
                     name: "id",
-                    type: "text",
+                    type: "key",
                     label: "id",
                     unique: true,
                     required: true,
@@ -152,7 +152,7 @@
             schema: [
                 {
                     name: "id",
-                    type: "text",
+                    type: "key",
                     label: "id",
                     unique: true,
                     required: true,
@@ -215,7 +215,7 @@
             schema: [
                 {
                     name: "id",
-                    type: "text",
+                    type: "key",
                     label: "id",
                     unique: true,
                     required: true,
@@ -259,7 +259,7 @@
             schema: [
                 {
                     name: "key",
-                    type: "text",
+                    type: "key",
                     label: "key",
                     unique: true,
                     required: true,
